--- a/app/templates/backend/views/layouts/_master.twig
+++ b/app/templates/backend/views/layouts/_master.twig
@@ -16,8 +16,9 @@
         <link rel="stylesheet" href="/lib/normalize-css/normalize.css" />
         <link rel="stylesheet" href="/lib/bootstrap/docs/assets/css/bootstrap.css" />
         <link rel="stylesheet" href="/lib/bootstrap/docs/assets/css/bootstrap-responsive.css" />
-        <link rel="stylesheet" href="/css/styles.css" />
 
+        {% include 'layouts/head.html' %}
+        
         {% endblock %}
 
         {% block script %}
