--- a/app/templates/backend/views/errors/_404.twig
+++ b/app/templates/backend/views/errors/_404.twig
@@ -1,7 +1,7 @@
 {% extends 'layouts/one_column.twig' %}
 
 {% block inline %} 
-{#<script type="text/javascript" src="/js/page.js"></script>#}
+
 {% endblock inline %}
 
 {% block sidebar %}
@@ -11,6 +11,6 @@
 {% block content %}
 <div class="font_cap">Fehler</div><br />
 404 - Datei nicht gefunden<br />
-Sie werden in 5 Sekunden auf die Homepage <a href="{{ urlFor('Home') }}">www.dreamnoise.com</a> weitergeleitet...
+Sie werden in 5 Sekunden auf die Startseite <a href="{{ urlFor('Home') }}"><%= siteName %></a> weitergeleitet...
 <meta HTTP-EQUIV="REFRESH" content="5; url=/">
 {% endblock content %}   
