Translated template into english, extended template to load js libs and added additional console.logs to app.coffee

--- a/app/templates/backend/views/_index.twig
+++ b/app/templates/backend/views/_index.twig
@@ -9,12 +9,12 @@
 {% block content %}
 
 <div class="page-header">
-	<h1>Willkommen <small>bei <%= siteName %></small></h1>
+	<h1>Welcome <small>to <%= siteName %></small></h1>
 </div>
 
 <div class="hero-unit">
-  <h1>Erfolgreich installiert</h1>
-  <p>Slim Framework mit allen wichtigen Grundfunktionen wurde installiert. Projekt entwicklungsbereit!</p>
+  <h1>Installation successful</h1>
+  <p>Slim Framework is installed with all needed components. Project ready for development!</p>
 </div>
 
 {% endblock content %}
