--- a/app/templates/backend/src/less/_styles.less
+++ b/app/templates/backend/src/less/_styles.less
@@ -1,5 +1,8 @@
-@my-color: #fdb77e;
+@less:gray;
 
-.my-color-class {
-	color: @my-color;
+#less-ready {
+	background-color: @less;
+	h1 {
+		color: white;
+	}
 }
