--- a/app/templates/backend/views/_index.twig
+++ b/app/templates/backend/views/_index.twig
@@ -17,4 +17,8 @@
   <p>Slim Framework is installed with all needed components. Project ready for development!</p>
 </div>
 
+<div id="less-ready">
+	<h1>Less is Ready</h1>
+</div>
+
 {% endblock content %}
