--- a/app/templates/backend/src/hbs/_head.hbs
+++ b/app/templates/backend/src/hbs/_head.hbs
@@ -1,5 +1,6 @@
 {{#dev}}
 <link rel="stylesheet" href="/dev/css/styles.css" />
+<script src="http://localhost:35729/livereload.js"></script>
 <script type="text/javascript" src="/dev/js/app.js"></script>
 {{/dev}}
 
