Manual extended, new features and several bugfixes

--- a/app/templates/backend/src/less/_styles.less
+++ b/app/templates/backend/src/less/_styles.less
@@ -1,8 +1,5 @@
-@less:gray;
+@less:#50b93b;
 
-#less-ready {
-	background-color: @less;
-	h1 {
-		color: white;
-	}
+.less-ready {
+	color: @less;
 }
