--- a/app/templates/backend/views/_index.twig
+++ b/app/templates/backend/views/_index.twig
@@ -17,8 +17,8 @@
   <p>Slim Framework is installed with all needed components. Project ready for development!</p>
 </div>
 
-<div id="less-ready">
-	<h1>Less is Ready</h1>
-</div>
+<p class="lead less-ready">
+	Less is Ready
+</p>
 
 {% endblock content %}
