--- a/app/templates/backend/views/layouts/_master.twig
+++ b/app/templates/backend/views/layouts/_master.twig
@@ -17,7 +17,7 @@
         {% endblock %}
 
         {% block script %}
-        <script src="/js/lib.js"></script>
+        <script src="/js/lib.min.js"></script>
         {% endblock %}
 
         {% include 'layouts/head.html' %}
