--- a/app/templates/backend/views/errors/_404.twig
+++ b/app/templates/backend/views/errors/_404.twig
@@ -8,7 +8,7 @@
 <div class="page-header"><h1>Error<br /><small>404 - File not found</small></h1></div>
 <em>{{ requesturi }}</em>
 <p class="lead">
-	You will be automatically redirected to the homepage <a href="{{ urlFor('Home') }}">test</a> in five seconds.
+	You will be automatically redirected to the homepage <a href="{{ urlFor('Home') }}"><%= siteName %></a> in five seconds.
 </p>
 <meta HTTP-EQUIV="REFRESH" content="5; url=/">
 {% endblock content %}   
