Several important bugfixes

--- a/app/templates/backend/views/layouts/_breadcrumb.twig
+++ b/app/templates/backend/views/layouts/_breadcrumb.twig
@@ -1,6 +1,6 @@
-<ul class="breadcrumb">
+<ol class="breadcrumb">
   {% if viewName != 'Home' %}
-  <li><a href="/">Home</a> <span class="divider">/</span></li>
+  <li><a href="/">Home</a></li>
   {% endif %}
   <li class="active">{{ viewName }}</li>
-</ul>
+</ol>
